#3437 Grid styles module html + css

--- a/_includes/article-grid.html
+++ b/_includes/article-grid.html
@@ -1,80 +1,91 @@
-<div class="row">
-    <div class="large-4 columns">
-        <article class="grid-teaser">
-            <a href="/story/">
-            <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
-            <header>
-                <h1 class="title"><span class="label">Betalt</span>  Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-                <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
-            </header>
-            <a class="btn-simple small soft" href="#">Les mer</a>     
-            </a>
-                                                        
-        </article>
-    </div>
 
-    <div class="large-4 columns">
-            <article class="">
-                <a href="/story/">
-                <img src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">- Jeg må innrømme at Sammer var litt for tysk for meg</h1>
-                    <p class="lead">Den tyske mesterhjernen får æren for at tysk fotball har reist seg.</p>
-                    <a class="btn-simple small soft" href="#">Les mer</a>
-                </header>       
-                </a>
-                              
-            </article>
-    </div>
-    <div class="large-4 columns">
-            <article class="">
-                <a href="/story/">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">- Det har blitt en del forespørsler om date, middag, kino og alt mulig.</h1>
-                    <p class="lead">«Idol»-Astrid sier ja til alt fordi hun synes det er fælt å si nei.</p>
-                    <a class="btn-simple small soft" href="#">Les mer</a>
-                </header>       
-                </a>
-                                 
-            </article>
-    </div>
-    <div class="large-4 columns">
-            <article class="">
-                <a href="/story/">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">Bruk smertepillene riktig</h1>
-                    <p class="lead"><span class="radius secondary label">Helse</span> Bruken av reseptbelagte smertepiller øker.</p>
-                </header>
-                <a class="btn-simple small soft" href="#">Les mer</a>       
-                </a>
-                                  
-            </article>
-    </div>
-    <div class="large-4 columns">
-            <article class="">
-                <a href="/story/">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268775/26877583/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
-                    <p class="lead">Ble avblåst i siste liten fordi isen på Mjøsa ikke var tjukk nok.</p>
-                </header>
-                <a class="btn-simple small soft" href="#">Les mer</a>     
-                </a>
-                              
-            </article>
-    </div>
-    <div class="large-4 columns">
-        <article class="">
-            <a href="/story/">
-            <header>
-                <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling når det er påtvunget, sier eliten</h1>
-                <p class="lead"><span class="radius secondary label">Samfunn</span> Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
-            </header>
-            <a class="btn-simple small soft" href="#">Les mer</a>     
-            </a>
-                              
-        </article>
-    </div>
-</div>
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-girl.jpg">
+        <h1 class="title"><span class="label">Betalt</span>  Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
+      </a>
+    </header>
+
+    <p>Temperamentet er en styrke, mener Tom Nordlie.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+  </article>
+
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-guy.jpg">
+        <h1 class="title">Jeg må innrømme at Sammer var litt for tysk for meg</h1>
+      </a>
+    </header>
+
+    <p>Den tyske mesterhjernen får æren for at tysk fotball har reist seg.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+  </article>
+
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-anotherguy.jpg">
+        <h1 class="title">Det har blitt en del forespørsler om date, middag, kino og alt mulig.</h1>
+      </a>
+    </header>
+
+    <p>«Idol»-Astrid sier ja til alt fordi hun synes det er fælt å si nei.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+    </a>
+  </article>
+
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-guy.jpg">
+        <h1 class="title">Bruk smertepillene riktig</h1>
+      </a>
+    </header>
+
+    <p><span class="radius secondary label">Helse</span> Bruken av reseptbelagte smertepiller øker.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+  </article>
+
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-girl.jpg">
+        <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
+      </a>
+    </header>
+
+    <p>Ble avblåst i siste liten fordi isen på Mjøsa ikke var tjukk nok.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+  </article>
+
+  <article class="grid-item grid-4">
+    <header>
+      <a href="#">
+        <img alt="" src="/img/assets/placeholder--teaser-anotherguy.jpg">
+        <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling når det er påtvunget, sier eliten</h1>
+      </a>
+    </header>
+
+    <p><span class="radius secondary label">Samfunn</span> Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
+
+    <footer>
+      <a class="btn-simple small soft" href="#">Les mer</a>
+    </footer>
+  </article>
