--- a/_sass/partials/global/_variables.scss
+++ b/_sass/partials/global/_variables.scss
@@ -13,6 +13,8 @@ $color-top-border: #DDD;
 $article-list-border-color: #E5E5E5;
 $article-list-link-color:   #333333;
 
+// Grid styles
+$grid-style-border-color: #D6D6D6;
 
 // Global Footer variables
 $footer-logo:         'nf-logo-light.png';
