--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -1,5 +1,6 @@
 @import 'partials/ads';
 @import 'partials/article';
 @import 'partials/footer';
+@import 'partials/grid-styles';
 @import 'partials/hero';
 @import 'partials/series';
