--- a/_sass/partials/module/partials/_grid-styles.scss
+++ b/_sass/partials/module/partials/_grid-styles.scss
@@ -1,6 +1,5 @@
-// All grids
-.article-grid {
-  margin: 30px 0;
+// Grid style: base
+.grid-style {
   article {
     min-height: 320px;
   }
@@ -10,18 +9,20 @@
     margin: 5px 0;
   }
   p {
+    color: #999;
     font-size: 14px;
     line-height: 16px;
-    color: #999;
+  }
+  footer {
+    text-align: center;
   }
   .btn-simple {
+    @include block-center;
     margin-bottom: 0;
-    left: 36%;
   }
 }
 
-
-// grid style 1
+// Grid style: bordered
 .grid-style--minimal {
   border-top: 1px dotted $grid-style-border-color;
   border-bottom: 1px dotted $grid-style-border-color;
@@ -87,9 +88,4 @@
   h1, a {
     color: #222;
   }
-}
-
-// details
-.most-popular {
-  background: #ffffe5;
 }
