Added main menu to index page

--- a/_includes/menu-main.html
+++ b/_includes/menu-main.html
@@ -1,5 +1,5 @@
 <nav id="nf-menu-main" class="nf-mainbar nf-red nf-large">
-  <section class="nf-brand"><a href="/"></a></section>
+  <section class="nf-brand"><a href="#">FORSIDE</a></section>
   <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
   <section class="nf-mainbar-section">
     <ul>
@@ -10,7 +10,6 @@
         <li class=""><a href="#">Hele landet</a></li>
         <li class="divider"></li>
         <li class=""><a href="#">Næringsliv</a></li>
-        <li class=""><a href="#">Underholdning &amp; kunst</a>
         <li class=""><a href="#">Helse</a></li>
         <li class=""><a href="#">Dingser</a>
         <li class="divider"></li>
