--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,5 +1,6 @@
 <nav id="nf-menu-top" class="nf-mainbar nf-white nf-small">
   <section class="nf-brand"><a href="/">Newsfront</a></section>
+  <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">More</a></section>
   <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">Meny</a></section>
   <section class="nf-mainbar-keep">
     <ul>
@@ -20,6 +21,8 @@
   <section class="nf-mainbar-sub">
     <ul>
       <li><a href="#">Forside</a></li>
+      <li><a href="#">Kultur</a></li>
+      <li><a href="#">Meninger</a></li>
       <li><a href="#">Nyheter</a></li>
       <li><a href="#">TV guide</a></li>
       <li><a href="#">Spill</a></li>
