--- a/_sass/modules/_menus.scss
+++ b/_sass/modules/_menus.scss
@@ -17,7 +17,7 @@ $nfTopbarHeight: 42px;
       a {
         display: table-cell;
         height: $nfTopbarHeight;
-        padding: 11px;
+        padding: 11px 8px;
       }
     }
   }
