Reordered links on top menu

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,11 +1,8 @@
 <nav id="nf-menu-top" class="nf-mainbar nf-white nf-small">
   <section class="nf-brand"><a href="/">Newsfront</a></section>
-  <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">More</a></section>
   <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">Meny</a></section>
   <section class="nf-mainbar-keep">
     <ul>
-      <li class=""><a href="/abonner/" class="">Abonnér</a></li>
-      <li class="divider"></li>
       <li class=""><a href="/s/" class="">Søk</a></li>
       <li class="divider"></li>
     </ul>
@@ -16,13 +13,16 @@
       <li class="divider"></li>
       <li><a href="/kultur/">Kultur</a></li>
       <li class="divider"></li>
+      <li class=""><a href="/abonner/" class="">Abonnér</a></li>
+      <li class="divider"></li>
     </ul>
   </section>
   <section class="nf-mainbar-sub">
     <ul>
       <li><a href="#">Forside</a></li>
-      <li><a href="#">Kultur</a></li>
       <li><a href="#">Meninger</a></li>
+      <li><a href="#">Kultur</a></li>
+      <li><a href="#">Abonnér</a></li>
       <li><a href="#">Nyheter</a></li>
       <li><a href="#">TV guide</a></li>
       <li><a href="#">Spill</a></li>
