Add secondary section to main menu

--- a/_includes/menu-main.html
+++ b/_includes/menu-main.html
@@ -1,5 +1,6 @@
 <nav id="nf-menu-main" class="nf-mainbar nf-red nf-large">
   <section class="nf-brand"><a href="#">FORSIDE</a></section>
+  <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">More...</a></section>
   <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
   <section class="nf-mainbar-section">
     <ul>
@@ -14,6 +15,23 @@
         <li class=""><a href="#">Dingser</a>
         <li class="divider"></li>
         <li class=""><a href="#">Også fra nyhetsbildet</a></li>
+    </ul>
+  </section>
+  <section class="nf-mainbar-sub">
+    <ul>
+      <li><a href="#">Forside</a></li>
+      <li><a href="#">Meninger</a></li>
+      <li><a href="#">Kultur</a></li>
+      <li><a href="#">Abonnér</a></li>
+      <li><a href="#">Nyheter</a></li>
+      <li><a href="#">TV guide</a></li>
+      <li><a href="#">Spill</a></li>
+      <li><a href="#">Eiendom</a></li>
+      <li><a href="#">Jobbmarked</a></li>
+      <li><a href="#">Bildeserier</a></li>
+      <li><a href="#">Reise</a></li>
+      <li><a href="#">Om oss</a></li>
+      <li><a href="#">A-Å</a></li>
     </ul>
   </section>
 </nav>
