Removed subsection from top menu

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -3,7 +3,7 @@
   <section class="nf-toggle-sub" data-toggle=".nf-mainbar-sub"><a href="#">Meny</a></section>
   <section class="nf-mainbar-keep">
     <ul>
-      <li class=""><a href="/s/" class="">Søk</a></li>
+      <li class=""><a href="/s/" class=""><img style="padding: 2px 0 0 4px;" src="/img/icon-search.png"></a></li>
       <li class="divider"></li>
     </ul>
   </section>
