Refactored nf-menu

--- a/_includes/menu-main-blue.html
+++ b/_includes/menu-main-blue.html
@@ -1,7 +1,7 @@
-<nav id="nf-menu-main-blue" class="nf-mainbar nf-blue nf-medium">
+<nav id="nf-menu-main-blue" class="nf-menu nf-blue nf-medium">
   <section class="nf-brand"><a href="/">Newsblu</a></section>
-  <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
-  <section class="nf-mainbar-section">
+  <section class="nf-toggle-main" data-toggle=".nf-section-main"><a href="#">Seksjoner</a></section>
+  <section class="nf-section-main">
     <ul>
       <li class=""><a href="#">Nyheter</a></li>
         <li class="divider"></li>
