--- a/_includes/menu-main.html
+++ b/_includes/menu-main.html
@@ -1,19 +1,40 @@
-<nav id="nf-menu-main" class="nf-mainbar nf-red nf-large">
+<nav id="nf-menu-main" class="nf-menu nf-red nf-large">
   <section class="nf-brand"><a href="#">FORSIDE</a></section>
-  <section class="nf-toggle" data-toggle=".nf-mainbar-section"><a href="#">Seksjoner</a></section>
-  <section class="nf-mainbar-section">
+  <section class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Seksjoner</a></section>
+  <section class="nf-section-main">
     <ul>
-      <li class=""><a href="#">Nyheter</a></li>
-        <li class="divider"></li>
-        <li class=""><a href="#">Nærmiljøet</a></li>
-        <li class=""><a href="#">Fylket</a></li>
-        <li class=""><a href="#">Hele landet</a></li>
-        <li class="divider"></li>
-        <li class=""><a href="#">Næringsliv</a></li>
-        <li class=""><a href="#">Helse</a></li>
-        <li class=""><a href="#">Dingser</a>
-        <li class="divider"></li>
-        <li class=""><a href="#">Også fra nyhetsbildet</a></li>
+      <li><a href="#">Nyheter</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Nærmiljøet</a></li>
+      <li><a href="#">Fylket</a></li>
+      <li><a href="#">Hele landet</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Næringsliv</a></li>
+      <li><a href="#">Helse</a></li>
+      <li><a href="#">Dingser</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Også fra nyhetsbildet</a></li>
+      <li class="divider"></li>
+    </ul>
+  </section>
+  <section class="nf-section-sub">
+    <ul>
+      <li><a href="#">Nyheter</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Meninger</a></li>
+      <li><a href="#">Kultur</a></li>
+      <li><a href="#">Abonnér</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Nærmiljøet</a></li>
+      <li><a href="#">Underholdning &amp; kunst</a></li>
+      <li><a href="#">Fylket</a></li>
+      <li><a href="#">Hele landet</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Næringsliv</a></li>
+      <li><a href="#">Helse</a></li>
+      <li><a href="#">Dingser</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Også fra nyhetsbildet</a></li>
     </ul>
   </section>
 </nav>
