Changed search box css

--- a/_sass/modules/_searchbox.scss
+++ b/_sass/modules/_searchbox.scss
@@ -3,53 +3,36 @@
   height: 60px;
 
   input[type="text"] {
-    -webkit-transition: width 0.3s;
-    -moz-transition: width 0.3s;
-    transition: width 0.3s;
-
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    position: absolute;
-    right: 0;
-    z-index: 10;
     display: block;
-    margin: 0;
-    width: 60px;
-    padding: 0;
+    width: 100%;
     height: 100%;
-    border: 1px solid #f00;
-
-    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 10px 80px 10px 20px;
     font-size: 20px;
     color: #666;
-    background: #f9f9f9;
-    border: none;
+    background: none;
+    border: 1px solid #ccc;
     outline: none;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
   }
-  &.nf-sbopen input[type="text"] {
-    padding: 10px 80px 10px 20px;
-    width: 100%;
-  }
-
   input[type="submit"], span.nf-search-button  {
     position: absolute;
     right: 0;
+    top: 0;
     z-index: 20;
     display: block;
-    margin: 0;
-    padding: 0;
     width: 60px;
     height: 60px;
-
+    margin: 0;
+    padding: 0;
     color: #fff;
     cursor: pointer;
+    border: none;
+    outline: none;
     background: url('../../img/mag.png') no-repeat center center #2ba6cb;
-    border: 0;
-  }
-  span.nf-search-button {
-    z-index: 40;
-    display: none;
   }
 }
