Added search bar

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -34,4 +34,5 @@ $legacy-support-for-mozilla: false;
 @import 'modules/buttons';
 @import 'modules/menus';
 @import 'modules/searchbox';
+@import 'modules/searchbar';
 @import 'modules/ad-holder';
