--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,4 +1,14 @@
 
+<div>
+  <form class="nf-searchbar" action="/s/" method="get">
+    <div class="row">
+      <input type="text" name="q" placeholder="Søk Newsfront...">
+      <input type="submit" value="">
+      <span class="nf-search-cancel"></span>
+    </div>
+  </form>
+</div>
+
 <nav id="nf-menu-top" class="nf-menu nf-white nf-small">
   <section class="nf-brand"><a href="/">Newsfront</a></section>
   <section class="nf-toggle-sub" data-toggle=".nf-section-sub"><a href="#">Meny</a></section>
