--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -11,15 +11,20 @@
 
   <script src="/js/nf-dropdownmenu.js"></script>
   <script src="/js/nf-loader.js"></script>
-  <script src="/js/nf-searchbox.js"></script>
+  <script src="/js/nf-searchbar.js"></script>
   <script src="/js/nf-solr-search.js"></script>
 
   <script>
     $(document).ready(function(){
       $(document).foundation();
       $('#video-wrapper').fitVids();
-      // $('#nf-search-form').nfSearchBox();
 
+      // Search
+      // $('.nf-sbform').nfSearchBox();
+      $('.nf-show-searchbox').searchBar('.nf-searchbar');
+      $('#nf-search-form').focus();
+
+      // Menus
       $('#nf-menu-top').menuToggle();
       $('#nf-menu-main').menuToggle();
       $('#nf-menu-main-blue').menuToggle();
